// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`analyzeCue > testcue.cue: track 1 features snapshot 1`] = `
[
  0.3846372365951538,
  -0.8521924614906311,
  -0.7619460225105286,
  -0.8904666900634766,
  -0.6389254331588745,
  -0.7394593358039856,
  -0.8004016876220703,
  -0.8237292766571045,
  0.338653564453125,
  0.3248119354248047,
  -0.3433048129081726,
  -0.6278722286224365,
  -0.2809374928474426,
  0.08685576915740967,
  0.24455928802490234,
  -0.5721703171730042,
  0.23292911052703857,
  0.1997990608215332,
  -0.5859134793281555,
  -0.067851722240448,
  -0.05990713834762573,
  -0.5848260521888733,
  -0.07882392406463623,
]
`;

exports[`analyzeCue > testcue.cue: track 1 metadata snapshot 1`] = `
{
  "album": "Album for CUE test",
  "artist": "David TMX",
  "title": "Renaissance",
}
`;

exports[`analyzeSong > no_tags.flac: features snapshot 1`] = `
[
  0.7862751483917236,
  0.9882060289382935,
  0.9726577997207642,
  -0.9609317779541016,
  0.9967741966247559,
  -0.9961528182029724,
  -0.9828205108642578,
  -0.9060061573982239,
  0.683293342590332,
  0.3488295078277588,
  0.9990822076797485,
  -0.9723278284072876,
  -0.9730480313301086,
  -0.9730529189109802,
  -0.9730550050735474,
  -0.9730555415153503,
  -0.000010967254638671875,
  -0.000011086463928222656,
  0.00010716915130615234,
  -0.0000851750373840332,
  -0.9209588170051575,
  -0.9999978542327881,
  -0.9999314546585083,
]
`;

exports[`analyzeSong > piano.flac: durationSecs snapshot 1`] = `5.851610112`;

exports[`analyzeSong > piano.flac: features snapshot 1`] = `
[
  0.1869969367980957,
  -0.9421520829200745,
  -0.8771694302558899,
  -0.9097558259963989,
  -0.8466101288795471,
  -0.8806663751602173,
  -0.9650254249572754,
  -0.9571965336799622,
  0.7018561363220215,
  0.7115820646286011,
  -0.11066007614135742,
  -0.15158700942993164,
  -0.21284788846969604,
  -0.21377605199813843,
  -0.20373529195785522,
  -0.21420371532440186,
  0.0001308917999267578,
  0.00009226799011230469,
  -0.000012934207916259766,
  -0.00021022558212280273,
  -0.4716533422470093,
  -0.660656213760376,
  0.1577744483947754,
]
`;

exports[`analyzeSong > s16_mono_22_5kHz.flac: features snapshot 1`] = `
[
  0.3846389055252075,
  -0.849141001701355,
  -0.7548104524612427,
  -0.8790748119354248,
  -0.6325826644897461,
  -0.725895881652832,
  -0.7757378816604614,
  -0.814672589302063,
  0.2716726064682007,
  0.25779056549072266,
  -0.34292513132095337,
  -0.628034234046936,
  -0.28095096349716187,
  0.08686459064483643,
  0.2444608211517334,
  -0.5723257064819336,
  0.23292064666748047,
  0.19981145858764648,
  -0.5859440565109253,
  -0.06784296035766602,
  -0.06000763177871704,
  -0.584857165813446,
  -0.07880377769470215,
]
`;

exports[`analyzeSong > s32_stereo_44_1_kHz.flac: features snapshot 1`] = `
[
  0.38463664054870605,
  -0.851722240447998,
  -0.7607464790344238,
  -0.8857495188713074,
  -0.6390608549118042,
  -0.7390842437744141,
  -0.789096474647522,
  -0.819186806678772,
  0.3385683298110962,
  0.32468628883361816,
  -0.34292227029800415,
  -0.6280317306518555,
  -0.2809453010559082,
  0.08687114715576172,
  0.24444890022277832,
  -0.5723239183425903,
  0.2329256534576416,
  0.19979524612426758,
  -0.5859384536743164,
  -0.06783121824264526,
  -0.06001478433609009,
  -0.5848569273948669,
  -0.07879859209060669,
]
`;

exports[`analyzeSongWithOptions > Version1 features snapshot 1`] = `
[
  0.1869969367980957,
  -0.9421520829200745,
  -0.8771694302558899,
  -0.9097558259963989,
  -0.8466101288795471,
  -0.8806663751602173,
  -0.9650254249572754,
  -0.9571965336799622,
  0.7018561363220215,
  0.7115820646286011,
  -0.5105419158935547,
  -0.5330665111541748,
  -0.5667821168899536,
  -0.5672929286956787,
  -0.5617668628692627,
  -0.567528247833252,
  -0.9646470546722412,
  -0.964648425579071,
  -0.9646521210670471,
  -0.9646590948104858,
]
`;

exports[`constants > AnalysisIndex 1`] = `
{
  "Chroma1": 10,
  "Chroma10": 19,
  "Chroma11": 20,
  "Chroma12": 21,
  "Chroma13": 22,
  "Chroma2": 11,
  "Chroma3": 12,
  "Chroma4": 13,
  "Chroma5": 14,
  "Chroma6": 15,
  "Chroma7": 16,
  "Chroma8": 17,
  "Chroma9": 18,
  "MeanLoudness": 8,
  "MeanSpectralCentroid": 2,
  "MeanSpectralFlatness": 6,
  "MeanSpectralRolloff": 4,
  "StdDeviationLoudness": 9,
  "StdDeviationSpectralCentroid": 3,
  "StdDeviationSpectralFlatness": 7,
  "StdDeviationSpectralRolloff": 5,
  "Tempo": 0,
  "Zcr": 1,
}
`;

exports[`constants > AnalysisIndexV1 1`] = `
{
  "Chroma1": 10,
  "Chroma10": 19,
  "Chroma2": 11,
  "Chroma3": 12,
  "Chroma4": 13,
  "Chroma5": 14,
  "Chroma6": 15,
  "Chroma7": 16,
  "Chroma8": 17,
  "Chroma9": 18,
  "MeanLoudness": 8,
  "MeanSpectralCentroid": 2,
  "MeanSpectralFlatness": 6,
  "MeanSpectralRolloff": 4,
  "StdDeviationLoudness": 9,
  "StdDeviationSpectralCentroid": 3,
  "StdDeviationSpectralFlatness": 7,
  "StdDeviationSpectralRolloff": 5,
  "Tempo": 0,
  "Zcr": 1,
}
`;

exports[`constants > FeaturesVersion 1`] = `
{
  "LATEST": 2,
  "Version1": 1,
  "Version2": 2,
}
`;

exports[`constants > NUMBER_FEATURES 1`] = `23`;

exports[`constants > NUMBER_FEATURES_V1 1`] = `20`;

exports[`cosineDistance > snapshot cosine distance piano/mono 1`] = `0.13462978601455688`;

exports[`decodeAnalysis > values round-trip through Float32Array precision 1`] = `
[
  0.5,
  0.25,
  0.125,
]
`;

exports[`distanceMatrix > snapshot 3-song matrix 1`] = `
[
  0,
  1.3995548486709595,
  1.3543858528137207,
  1.3995548486709595,
  0,
  0.09721757471561432,
  1.3543858528137207,
  0.09721757471561432,
  0,
]
`;

exports[`euclideanDistance > snapshot distance between mono and stereo 1`] = `0.09721757471561432`;

exports[`euclideanDistance > snapshot distance between piano and mono 1`] = `1.3995548486709595`;

exports[`mahalanobisDistance > snapshot with known vectors 1`] = `1.0862780008339619`;
